<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2015 Zhang Hai <Dreaming.in.Code.ZH@Gmail.com>
  ~ All Rights Reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Set an id on this group to show a divider. -->
    <group android:id="@+id/navigation_group_primary"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_message"
            android:icon="@drawable/common_svg_message"
            android:title="@string/my_navigation_message" />

    </group>


    <group
        android:id="@+id/navigation_group_secondary"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_book"
            android:icon="@drawable/common_svg_book"
            android:title="@string/my_navigation_book" />

        <item
            android:id="@+id/navigation_movie"
            android:icon="@drawable/common_svg_movie"
            android:title="@string/my_navigation_movie" />

        <item
            android:id="@+id/navigation_music"
            android:icon="@drawable/common_svg_music"
            android:title="@string/my_navigation_music" />

        <item
            android:id="@+id/navigation_diary"
            android:icon="@drawable/common_svg_diary"
            android:title="@string/my_navigation_diary" />
    </group>

    <group android:id="@+id/navigation_group_third" >

        <item
            android:id="@+id/navigation_exit"
            android:icon="@drawable/common_svg_exit"
            android:title="@string/my_navigation_logout" />

    </group>
</menu>
